--- a/package.json
+++ b/package.json
@@ -1,39 +1,25 @@
 {
   "name": "countries-export-import",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.ts",
-  "type": "module",
+  "description": "React App",
+  "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/server.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\""
+    "go": "start http://localhost:3000 && nodemon index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dziwuj/Contries-export-import.git"
+    "url": "\\"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dziwuj/Contries-export-import/issues"
-  },
-  "homepage": "https://github.com/dziwuj/Contries-export-import#readme",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "recharts": "^2.1.12",
-    "sass": "^1.53.0"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
     "@types/node": "^18.0.6",
-    "concurrently": "^7.2.2",
-    "express": "^4.18.1",
-    "mongodb": "^4.8.0",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "nodemon": "^2.0.19",
-    "npm-run-all": "^4.1.5",
     "typescript": "^4.7.4"
   }
 }
