--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React App",
   "main": "index.js",
   "scripts": {
-    "go": "start http://localhost:3000 && nodemon index.js"
+    "go": "start http://localhost:5000 && nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.0.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^4.8.0",
     "nodemon": "^2.0.19",
     "typescript": "^4.7.4"
   }
