--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,10 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "http-proxy-middleware": "^2.0.6",
-    "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^2.0.13",
+    "react-scripts": "^4.0.3",
     "recharts": "^2.1.12",
-    "scss": "^0.2.4",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -46,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "scss": "^0.2.4"
   }
 }
