--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React App",
   "main": "index.js",
   "scripts": {
-    "go": "start http://localhost:5000 && nodemon index.js"
+    "go": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^4.8.0",
